<resources>
    <string name="app_name">PokerAssist</string>
    <string name="call">Call</string>
    <string name="call_fold">Call or Fold</string>
    <string name="card_prefix">card_</string>
    <string name="settings_file_key">com.example.pokerassist.SETTINGS_FILE_KEY</string>
    <string name="drawn_cards_tag">drawnCards</string>
    <string name="error">Error</string>
    <string name="error_selection_1">Make sure</string>
    <string name="error_selection_2">cards are selected.</string>
    <string name="error_settings">Please verify settings.</string>
    <string name="error_settings_2">Please populate all fields.</string>
    <string name="fold">Fold</string>
    <string name="fudge_flush">...but you can also try for a flush.</string>
    <string name="fudge_straight">...but you can also try for a straight.</string>
    <string name="next_act_tag">nextAct</string>
    <string name="num_sel_tag">numSel</string>
    <string name="ok">Ok</string>
    <string name="players">Players</string>
    <string name="preflop_recommendation">Preflop Recommendation</string>
    <string name="proceed">Proceed</string>
    <string name="raise">Raise</string>
    <string name="raise_call">Raise or Call</string>
    <string name="raise_call_fold">Raise, Call, or Fold</string>
    <string name="raise_fold">Raise or Fold</string>
    <string name="river_probabilities">River Probabilities</string>
    <string name="selected_cards_tag">selectedCards</string>
    <string name="select_drawn_cards">Select Drawn Cards</string>
    <string name="select_river_rards">Select River Cards</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="tap_for_settings">Tap anywhere to change settings</string>
    <string name="title_tag">title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
